--- a/Networks E2_R/NetworksE3_Analysis.Rmd
+++ b/Networks E2_R/NetworksE3_Analysis.Rmd
@@ -14,38 +14,39 @@ knitr::opts_chunk$set(echo = TRUE)
 ``` {r warning=F, message=F}
 library(dplyr)
 netdemask = read.csv("Compiled_NetworksE3_final.csv", header = TRUE, sep = ",")
+
+itemlist = read.csv("E2_itemlist.csv", header = TRUE, sep = ",")
+colnames(itemlist) = c("prime_word", "target_word", "ItemNo", 
+                       "UndirectedPMFG", "PMFGPath", "ACN_0.1", "ACNPath_0.1", "ACN.r")
+netdemask$prime_word = as.character(netdemask$prime_word)
+netdemask$target_word = as.character(netdemask$target_word)
+
+final_netdemask = left_join(netdemask, itemlist)
+
+## equal 5-tile distribution for UMPMFG, and ACN-r 
+
+final_netdemask  = final_netdemask %>%
+  mutate(UPMFG_Cat = ntile(UndirectedPMFG, 5))
+
+final_netdemask  = final_netdemask %>%
+  mutate(ACN.r.cat = ntile(ACN.r, 5))
+
+# final_netdemask$UPMFG_Cat = ifelse(final_netdemask$UndirectedPMFG >= 17, "17-22",
+#                                    ifelse(final_netdemask$UndirectedPMFG >=14, "14-16",
+#                             ifelse (final_netdemask$UndirectedPMFG >= 11, "11-13", 
+#                     ifelse (final_netdemask$UndirectedPMFG >= 7, "7-10",
+#                     ifelse (final_netdemask$UndirectedPMFG >= 4, "4-6", "1-3")))))
+
+final_netdemask$UPMFG_Cat = ordered(as.factor(as.character(final_netdemask$UPMFG_Cat)), 
+                            levels = c("1", "2", "3", "4", "5"))
+
+final_netdemask$ACN.r.cat = ordered(as.factor(as.character(final_netdemask$ACN.r.cat)), 
+                            levels = c("1", "2", "3", "4", "5"))
+
 ## filtering out incorrect target responses
-netdemask = netdemask %>% filter(TargetAccuracy == 1)
-```
-
-# PL Dist
-
-```{r}
-netdemask2 = read.csv("Compiled_NetworksE3_final.csv", header = TRUE, sep = ",")
-
-item_dist = group_by(netdemask2, Procedure, Stimuli1) %>%
-  summarise_at(vars(pathlength, Undirected, Directed), mean)
-## count distribution of items 
-library(dplyr)
-undirected_items = group_by(item_dist, Procedure, pathlength, Undirected) %>%
-  summarize(undirecteditems = n())
-undirected_items$undirectedpercent = undirected_items$undirecteditems/40
-
-undirected_rmisc = Rmisc::summarySE(undirected_items,
-                                    measurevar = "undirectedpercent",
-                                    groupvars = c("pathlength", "Undirected"))
-
-directed_items = group_by(item_dist, Procedure, pathlength, Directed) %>%
-  summarize(directeditems = n())
-directed_items$directedpercent = directed_items$directeditems/40
-
-directed_rmisc = Rmisc::summarySE(directed_items,
-                                    measurevar = "directedpercent",
-                                    groupvars = c("pathlength", "Directed"))
-
+netdemask = final_netdemask %>% filter(TargetAccuracy == 1)
 
 ```
-
 
 #Raw Reaction Time
 
@@ -446,12 +447,12 @@ elpnorms$prime_word = as.character(elpnorms$prime_word)
 
 netdemask$prime_word = as.character(netdemask$prime_word)
 merged_sem_prime= inner_join(netdemask, elpnorms, by = "prime_word")
-merged_sem_prime = merged_sem_prime[,c(2,5, 20,28)]
+merged_sem_prime = merged_sem_prime[,c(2,5, 20,36)]
 
 colnames(elpnorms) = c("target_word", "target_concreteness")
 netdemask$target_word = as.character(netdemask$target_word)
 merged_sem_target= inner_join(netdemask, elpnorms, by = "target_word")
-merged_sem_target = merged_sem_target[,c(2,5, 22,28)]
+merged_sem_target = merged_sem_target[,c(2,5, 22,36)]
 
 merged_concretness = full_join(merged_sem_prime, merged_sem_target,
                            by = c("Trial", "subject"))
@@ -602,6 +603,166 @@ z_rmisc_undirected$Network = "Undirected Simple Association"
 
 ```
 
+## Steyvers U-PMFG
+
+```{r}
+library(lme4)
+
+RTprime_undirected_pmfg = lmer(data = final_netdemask_z, 
+                          zRTTarget_trim ~ UPMFG_Cat + 
+                            mean_len_c + mean_logf_c + mean_ldtz_c +
+                           mean_conc_c +
+                            (1|subject) + (1|ItemNumber))
+summary(RTprime_undirected_pmfg)
+car::Anova(RTprime_undirected_pmfg)
+
+# RTprime_undirected_linear_pmfg = lmer(data = final_netdemask_z, 
+#                           zRTTarget_trim ~ UPMFG_Cat + 
+#                              mean_len_c + mean_logf_c + mean_ldtz_c +
+#                            mean_conc_c +
+#                             (1|subject) + (1|ItemNumber))
+# 
+# RTprime_undirected_quad_pmfg = lmer(data = final_netdemask_z, 
+#                           zRTTarget_trim ~ UPMFG_Cat + 
+#                             I(UPMFG_Cat^2)+
+#                              mean_len_c + mean_logf_c + mean_ldtz_c +
+#                            mean_conc_c +
+#                             (1|subject) + (1|ItemNumber))
+# summary(RTprime_undirected_quad_pmfg)
+# car::Anova(RTprime_undirected_quad_pmfg)
+# anova(RTprime_undirected_linear_pmfg, RTprime_undirected_quad_pmfg)
+```
+
+### Plot
+
+```{r}
+z_rmisc_undirected_pmfg = Rmisc::summarySE(final_netdemask_z, 
+                        measurevar = "zRTTarget_trim",
+                        groupvars = c("UPMFG_Cat"))
+
+z_rmisc_undirected_pmfg$zRTTarget_trim = as.numeric(z_rmisc_undirected_pmfg$zRTTarget_trim)
+
+library(ggplot2)
+library(ggthemes)
+
+z_rmisc_undirected_pmfg %>% 
+  ggplot(aes(x = UPMFG_Cat, y = zRTTarget_trim, group = 1))+
+  geom_point()+
+#  geom_smooth(method = "loess")+
+geom_line(color = "red")+
+   geom_errorbar(aes(ymin=zRTTarget_trim - ci, ymax=zRTTarget_trim + ci), 
+             width=.05, color = "gray30", 
+             position = position_dodge(0.7))+
+ theme_few()+
+  #scale_x_continuous(breaks = c(1,2,3,4,5,6,10,15,20))+
+    xlab("U-PMFG Path Length") + ylab("z-RT to Recognise Target") + 
+  ggtitle("z-RT to Demask Target by Path Length (PMFG Undirected)")  +
+   theme(axis.text = element_text(size = rel(1)),
+          axis.title = element_text(face = "bold", size = rel(1)),
+          legend.title = element_text(face = "bold", size = rel(1)),
+         plot.title = element_text(hjust = .5),
+         strip.text.x = element_text(face = "bold", size = rel(1.4)))
+
+z_rmisc_undirected_pmfg$Network = "Undirected PMFG"
+
+```
+
+## ACN Unfiltered
+
+```{r}
+RTprime_acn_unfiltered = lmer(data = final_netdemask_z, 
+                          zRTTarget_trim ~ ACN.r.cat + 
+                            mean_len_c + mean_logf_c + mean_ldtz_c +
+                           mean_conc_c +
+                            (1|subject) + (1|ItemNumber))
+summary(RTprime_acn_unfiltered)
+car::Anova(RTprime_acn_unfiltered)
+```
+
+### Plot
+
+```{r}
+z_rmisc_acn_unfiltered = Rmisc::summarySE(final_netdemask_z, 
+                        measurevar = "zRTTarget_trim",
+                        groupvars = c("ACN.r.cat"))
+
+z_rmisc_acn_unfiltered$ACNUnfiltered = 6-as.numeric(z_rmisc_acn_unfiltered$ACN.r.cat)
+
+z_rmisc_acn_unfiltered$zRTTarget_trim = as.numeric(z_rmisc_acn_unfiltered$zRTTarget_trim)
+
+library(ggplot2)
+library(ggthemes)
+
+z_rmisc_acn_unfiltered %>% 
+  ggplot(aes(x = factor(ACNUnfiltered), y = zRTTarget_trim, group = 1))+
+  geom_point()+
+#  geom_smooth(method = "loess")+
+geom_line(color = "red")+
+   geom_errorbar(aes(ymin=zRTTarget_trim - ci, ymax=zRTTarget_trim + ci), 
+             width=.05, color = "gray30", 
+             position = position_dodge(0.7))+
+ theme_few()+
+  #scale_x_continuous(breaks = c(1,2,3,4,5,6,10,15,20))+
+    xlab("U-PMFG Path Length") + ylab("z-RT to Recognise Target") + 
+  ggtitle("z-RT to Demask Target by Path Length (PMFG Undirected)")  +
+   theme(axis.text = element_text(size = rel(1)),
+          axis.title = element_text(face = "bold", size = rel(1)),
+          legend.title = element_text(face = "bold", size = rel(1)),
+         plot.title = element_text(hjust = .5),
+         strip.text.x = element_text(face = "bold", size = rel(1.4)))
+
+z_rmisc_acn_unfiltered$Network = "ACN Unfiltered"
+```
+
+## ACN 0.1
+
+```{r}
+final_netdemask_z$ACN_0.1 = as.factor(final_netdemask_z$ACN_0.1)
+RTprime_acn_0.1 = lmer(data = final_netdemask_z, 
+                          zRTTarget_trim ~ ACN_0.1 + 
+                            mean_len_c + mean_logf_c + mean_ldtz_c +
+                           mean_conc_c +
+                            (1|subject) + (1|ItemNumber))
+summary(RTprime_acn_0.1)
+car::Anova(RTprime_acn_0.1)
+```
+
+### Plot
+
+```{r}
+z_rmisc_acn_0.1 = Rmisc::summarySE(final_netdemask_z, 
+                        measurevar = "zRTTarget_trim",
+                        groupvars = c("ACN_0.1"))
+
+
+z_rmisc_acn_0.1$zRTTarget_trim = as.numeric(z_rmisc_acn_0.1$zRTTarget_trim)
+
+library(ggplot2)
+library(ggthemes)
+
+z_rmisc_acn_0.1 %>% 
+  ggplot(aes(x = factor(ACN_0.1), y = zRTTarget_trim, group = 1))+
+  geom_point()+
+#  geom_smooth(method = "loess")+
+geom_line(color = "red")+
+   geom_errorbar(aes(ymin=zRTTarget_trim - ci, ymax=zRTTarget_trim + ci), 
+             width=.05, color = "gray30", 
+             position = position_dodge(0.7))+
+ theme_few()+
+  #scale_x_continuous(breaks = c(1,2,3,4,5,6,10,15,20))+
+    xlab("U-PMFG Path Length") + ylab("z-RT to Recognise Target") + 
+  ggtitle("z-RT to Demask Target by Path Length (PMFG Undirected)")  +
+   theme(axis.text = element_text(size = rel(1)),
+          axis.title = element_text(face = "bold", size = rel(1)),
+          legend.title = element_text(face = "bold", size = rel(1)),
+         plot.title = element_text(hjust = .5),
+         strip.text.x = element_text(face = "bold", size = rel(1.4)))
+
+z_rmisc_acn_0.1$Network = "ACN 0.1"
+```
+
+
+
 ## Steyvers Directed
 
 ```{r}
@@ -734,15 +895,17 @@ final_word2vec = inner_join(final_netdemask_z, word2vec,
 ## britannica is excluded
 final_word2vec = final_word2vec %>% arrange(subject, Stimuli1)
 
+final_word2vec$ACN_0.1 = as.numeric(final_word2vec$ACN_0.1)
+
 mean_cosines =  group_by(final_word2vec,Procedure, ItemNumber) %>%
   summarise_at(vars(Undirected, Directed, pathlength, word2veccosine,
-                    LSA), mean)
+                    LSA, ACN.r, ACN_0.1, UndirectedPMFG), mean)
 
 mean_cosines$newdirected = ifelse(mean_cosines$Directed == "Inf" | 
                            mean_cosines$Directed == "NA", NA,
                          mean_cosines$Directed)
 
-Hmisc::rcorr(as.matrix(mean_cosines[,c(3,6)]))$r
+Hmisc::rcorr(as.matrix(mean_cosines[,c(3,9)]))$r
 ```
 
 ## z-scoring measures
@@ -901,13 +1064,51 @@ model_word2vec  = lmer(data = final_word2vec_success,
 ## at the item level, each word has a cosine and path
 final_word2vec_complete = final_word2vec[which(!is.na(final_word2vec$directedcollapsed) & !is.na(final_word2vec$mean_conc_c) & !is.na(final_word2vec$LSA)),]
 
+final_word2vec_complete$ACN.r.cat = as.numeric(final_word2vec_complete$ACN.r.cat)
+final_word2vec_complete$UPMFG_Cat = as.numeric(final_word2vec_complete$UPMFG_Cat)
+
 final_item = group_by(final_word2vec_complete, 
                       Pair, Procedure, prime_word, target_word) %>%
-  summarize_at(vars(word2veccosine, LSA, Undirected, newdirected, pathlength,
+  summarize_at(vars(word2veccosine, LSA, Undirected, 
+                    newdirected, pathlength, UPMFG_Cat,
+                    ACN_0.1, ACN.r.cat,
                     zRTTarget_trim,
                     mean_len_c, mean_logf_c ,mean_ldtz_c, mean_conc_c), mean)
 
 final_item$directedcollapsed = ifelse((final_item$newdirected == "6" |final_item$newdirected == "7" | final_item$newdirected == "8"), "H",final_item$newdirected)
+
+# ## which PL fell in which ntile for umpfg and acn.r 
+# final_netdemask$UPMFG_Cat = as.numeric(final_netdemask$UPMFG_Cat)
+# items_pmfg = group_by(final_netdemask, UndirectedPMFG) %>%
+#   summarize_at(vars(UPMFG_Cat), mean)
+# 
+# final_netdemask$ACN.r.cat = as.numeric(final_netdemask$ACN.r.cat)
+# items_acn.r = group_by(final_netdemask, ACN.r) %>%
+#   summarize_at(vars(ACN.r.cat), mean)
+
+
+# final_item$UPMFG_Cat = ifelse(final_item$UndirectedPMFG <=3 , "1", 
+#                              ifelse(final_item$UndirectedPMFG <=6 , "2",
+#                                     ifelse(final_item$UndirectedPMFG <=9 , "3",
+#                                   ifelse(final_item$UndirectedPMFG <=13 , "4",
+#                             ifelse(final_item$UndirectedPMFG <=16 , "5", "6")))))
+# 
+# final_item$ACN.r.cat = ifelse(final_item$ACN.r <=-0.001422 , "1", 
+#                              ifelse(final_item$ACN.r <=-0.001148 , "2",
+#                                     ifelse(final_item$ACN.r <=-0.000702 , "3",
+#                                   ifelse(final_item$ACN.r <=0.094439 , "4",
+#                             ifelse(final_item$ACN.r <=0.201287 , "5", "6")))))
+
+# rounding 
+final_item$UPMFG_Cat = round(final_item$UPMFG_Cat)
+final_item$ACN.r.cat = round(final_item$ACN.r.cat)
+
+final_item$UPMFG_Cat = ordered(as.factor(as.character(final_item$UPMFG_Cat)), 
+                            levels = c("1", "2", "3", "4", "5"))
+final_item$ACN.r.cat = ordered(as.factor(as.character(final_item$ACN.r.cat)), 
+                            levels = c("1", "2", "3", "4", "5"))
+final_item$ACN_0.1 = ordered(as.factor(as.character(final_item$ACN_0.1)), 
+                            levels = c("1", "2", "3"))
 
 final_item$directedcollapsed = as.factor(final_item$directedcollapsed)
 final_item$undirectedfac = as.factor(final_item$Undirected)
@@ -928,41 +1129,83 @@ final_item_unconditional = lm(data = x,
                                 mean_len_c+ mean_logf_c +
                                 mean_ldtz_c + mean_conc_c)
  summary(final_item_unconditional)
+ AIC(final_item_unconditional)
+ BIC(final_item_unconditional)
  
- 
- ## r2 = 0.1333
+ ## r2 = 0.13.06
 
 final_item_undirected = lm(data = x, 
-                              zRTTarget_trim ~ 1 + undirectedfac +
+                              zRTTarget_trim ~ 1 + Undirected +
                              mean_len_c+ mean_logf_c +
                                 mean_ldtz_c + mean_conc_c)
  summary(final_item_undirected)
+ AIC(final_item_undirected)
+ BIC(final_item_undirected)
  anova(final_item_unconditional, final_item_undirected)
 ## 11.78 wo covariates
- ## 22.16
+ ## 22.01
+ 
+ final_item_undirected_pmfg = lm(data = x, 
+                              zRTTarget_trim ~ 1 + as.numeric(UPMFG_Cat) +
+                             mean_len_c+ mean_logf_c +
+                                mean_ldtz_c + mean_conc_c)
+ summary(final_item_undirected_pmfg)
+ AIC(final_item_undirected_pmfg)
+ BIC(final_item_undirected_pmfg)
+ anova(final_item_unconditional, final_item_undirected_pmfg)
+ 
+ #16.15
+ x$ACN.r.cat = as.factor(x$ACN.r.cat)
+ final_item_acn_unfiltered = lm(data = x, 
+                              zRTTarget_trim ~ 1 + as.numeric(ACN.r.cat) +
+                             mean_len_c+ mean_logf_c +
+                                mean_ldtz_c + mean_conc_c)
+ summary(final_item_acn_unfiltered)
+ AIC(final_item_acn_unfiltered)
+ BIC(final_item_acn_unfiltered)
+ anova(final_item_unconditional, final_item_acn_unfiltered)
+ 
+ #24.33
+ x$ACN_0.1 = as.factor(x$ACN_0.1)
+ final_item_acn.1 = lm(data = x, 
+                              zRTTarget_trim ~ 1 + as.numeric(ACN_0.1) +
+                             mean_len_c+ mean_logf_c +
+                                mean_ldtz_c + mean_conc_c)
+ summary(final_item_acn.1)
+ AIC(final_item_acn.1)
+ BIC(final_item_acn.1)
+ anova(final_item_unconditional, final_item_acn.1)
+ 
+ #24.35
 
 final_item_word2vec = lm(data = x, 
                               zRTTarget_trim ~ 1 + word2veccosine+
                            mean_len_c+ mean_logf_c +
                                 mean_ldtz_c + mean_conc_c)
  summary(final_item_word2vec)
+ AIC(final_item_word2vec)
+ BIC(final_item_word2vec)
   #r2 = 16.01
-# 28.03
+# 27.72
+ 
 final_item_directed = lm(data = x, 
-                              zRTTarget_trim ~ directedcollapsed +
+                              zRTTarget_trim ~ newdirected +
                            mean_len_c+ mean_logf_c +
                                 mean_ldtz_c + mean_conc_c)
  summary(final_item_directed)
- #25.98
+ AIC(final_item_directed)
+ BIC(final_item_directed)
+ #26.03
   anova(final_item_unconditional, final_item_directed)
 
  final_item_kenett = lm(data = x, 
-                              zRTTarget_trim ~ kenettfac +
+                              zRTTarget_trim ~ pathlength +
                           mean_len_c+ mean_logf_c +
                                 mean_ldtz_c + mean_conc_c)
  summary(final_item_kenett)
- 
- #26.99
+ AIC(final_item_kenett)
+ BIC(final_item_kenett)
+ #26.64
  
   anova(final_item_unconditional, final_item_kenett)
 
@@ -972,64 +1215,55 @@ final_item_directed = lm(data = x,
                         mean_len_c+ mean_logf_c +
                                 mean_ldtz_c + mean_conc_c)
  summary(final_item_lsa)
+ AIC(final_item_lsa)
+ BIC(final_item_lsa)
  
  # 14.79
- # 25.05
+ # 24.97
  ## model with covariates
   
+#  > AIC(final_item_acn_unfiltered)
+# [1] 511.9794
+# > AIC(final_item_acn.1)
+# [1] 510.5005
 # > AIC(final_item_kenett)
-# [1] 500.7552
+# [1] 503.7149
 # > AIC(final_item_undirected)
-# [1] 523.3278
+# [1] 525.2435
+# > AIC(final_item_undirected_pmfg)
+# [1] 557.4814
 # > AIC(final_item_directed)
-# [1] 506.4442
-# > AIC(final_item_lsa)
-# [1] 503.7628
+# [1] 507.1761
 # > AIC(final_item_word2vec)
-# [1] 486.8023
- 
- ## model without covariates
- 
-#  > AIC(final_item_undirected)
-# [1] 567.2967
-# > AIC(final_item_directed)
-# [1] 546.206
-# > AIC(final_item_kenett)
-# [1] 563.0322
-# > AIC(final_item_lsa)
-# [1] 548.8717
-# > AIC(final_item_word2vec)
-# [1] 542.8845
+# [1] 489.5196
+#  > AIC(final_item_lsa)
+# [1] 505.1111
+
  
  ## model with covariates
 
-# > stats4::BIC(final_item_kenett)
-# [1] 545.0662
-# > stats4::BIC(final_item_undirected)
-# [1] 559.5823
-# > stats4::BIC(final_item_directed)
-# [1] 550.7553
-# > stats4::BIC(final_item_lsa)
-# [1] 531.9608
-# > stats4::BIC(final_item_word2vec)
-# [1] 515.0003
- 
- ## modelwithout covariates
- 
-#  > stats4::BIC(final_item_word2vec)
-# [1] 554.9694
-# > stats4::BIC(final_item_directed)
-# [1] 574.404
-# > stats4::BIC(final_item_undirected)
-# [1] 587.4381
-# > stats4::BIC(final_item_kenett)
-# [1] 591.2302
-# > stats4::BIC(final_item_lsa)
-# [1] 560.9565
+# > BIC(final_item_acn_unfiltered)
+# [1] 554.9447
+# > BIC(final_item_acn.1)
+# [1] 542.7652
+# > BIC(final_item_kenett)
+# [1] 548.0789
+# > BIC(final_item_undirected)
+# [1] 561.5412
+# > BIC(final_item_undirected_pmfg)
+# [1] 597.7778
+# > BIC(final_item_directed)
+# [1] 551.54
+# > BIC(final_item_lsa)
+# [1] 533.3427
+# > BIC(final_item_word2vec)
+# [1] 517.7512
  
  final_item_multiple = lm(data = x, 
-                              zRTTarget_trim ~ directedcollapsed + kenettfac + 
-                            undirectedfac +
+                              zRTTarget_trim ~ newdirected + pathlength + 
+                            Undirected + as.numeric(UPMFG_Cat) + as.numeric(ACN.r.cat) +
+                            as.numeric(ACN_0.1) +
+                            word2veccosine + LSA +
                             mean_len_c+ mean_logf_c +
                                 mean_ldtz_c + mean_conc_c)
  summary(final_item_multiple)
@@ -1059,7 +1293,7 @@ x$pathlength = c(5,4,3,2,1)
 word2vec_cosine_agg = cbind(x, word2vec_cosine_agg)
 word2vec_cosine_agg$pathlengthfac = as.factor(word2vec_cosine_agg$pathlength)
 word2vec_cosine_agg$Network = "word2vec"
-
+ 
 lsa_cosine_agg  = Rmisc::summarySE(final_word2vec,
                                         measurevar = "zRTTarget_trim",
                                         groupvars = c("LSAfacfinal"))
@@ -1078,10 +1312,26 @@ lsa_cosine_agg$Network = "LSA"
 ```{r}
 colnames(z_rmisc_directed_collapsed) = colnames(z_rmisc_kenett)
 colnames(z_rmisc_undirected) = colnames(z_rmisc_kenett)
+z_rmisc_undirected_pmfg$Network = c("1", "2", "3", "4", "5", "6")
+colnames(z_rmisc_undirected_pmfg) = c("pathlength", "N", "zRTTarget_trim", 
+                                      "sd", "se", "ci", "pmfg_fac")
+z_rmisc_undirected_pmfg$Network = "Undirected PMFG"
+colnames(z_rmisc_undirected_pmfg) = colnames(z_rmisc_kenett)
+
+z_rmisc_acn_0.1$Network = c("1", "2", "3")
+colnames(z_rmisc_acn_0.1) = c("pathlength", "N", "zRTTarget_trim", 
+                                      "sd", "se", "ci", "acn_fac")
+z_rmisc_acn_0.1$Network = "ACN_0.1"
+colnames(z_rmisc_acn_0.1) = colnames(z_rmisc_kenett)
+colnames(z_rmisc_acn_unfiltered) = colnames(z_rmisc_kenett)
 z_rmisc_directed_collapsed = z_rmisc_directed_collapsed %>%
   filter(!pathlengthfac == "H")
 
-z_rmisc_combined = rbind(z_rmisc_kenett, z_rmisc_undirected,
+z_rmisc_combined = rbind(z_rmisc_kenett, 
+                         z_rmisc_acn_unfiltered,
+                         z_rmisc_acn_0.1,
+                         z_rmisc_undirected,
+                         z_rmisc_undirected_pmfg,
                          z_rmisc_directed_collapsed,
                          word2vec_cosine_agg,
                          lsa_cosine_agg)
@@ -1089,15 +1339,23 @@ z_rmisc_combined = rbind(z_rmisc_kenett, z_rmisc_undirected,
 
 z_rmisc_combined$Network = as.factor(z_rmisc_combined$Network)
 
-z_rmisc_combined$pathlengthfac = ordered(as.factor(as.character(z_rmisc_combined$pathlength)), 
+z_rmisc_combined$pathlengthfac = ordered(as.factor(as.character(z_rmisc_combined$pathlengthfac)), 
                             levels = c("1", "2", "3", "4", "5", "6","15"))
 
 colnames(z_rmisc_combined) = c("pathlength", "N", "zRTTarget_trim",
                                "sd", "se", "ci", "pathlengthfac", "Model")
 
-z_rmisc_combined$Representation = c("ACN", "ACN", "ACN", "ACN", "ACN", "ACN",
+z_rmisc_combined$Representation = c("ACN PMFG", "ACN PMFG", "ACN PMFG", 
+                                    "ACN PMFG", "ACN PMFG", "ACN PMFG",
+                                    "ACN Unfiltered", "ACN Unfiltered", 
+                                    "ACN Unfiltered", "ACN Unfiltered", 
+                                    "ACN Unfiltered", "ACN Unfiltered", 
+                                    "ACN_0.1", "ACN_0.1", "ACN_0.1", 
                                     "Undirected SDN", "Undirected SDN",
                                     "Undirected SDN","Undirected SDN",
+                                    "Undirected PMFG", "Undirected PMFG",
+                                    "Undirected PMFG", "Undirected PMFG",
+                                    "Undirected PMFG", "Undirected PMFG",
                                     "Directed SDN","Directed SDN",
                                     "Directed SDN","Directed SDN",
                                     "Directed SDN", 
@@ -1106,13 +1364,14 @@ z_rmisc_combined$Representation = c("ACN", "ACN", "ACN", "ACN", "ACN", "ACN",
                                     "LSA","LSA","LSA","LSA","LSA") 
 z_rmisc_combined$Representation=
   ordered(as.factor(as.character(z_rmisc_combined$Representation)), 
-    levels = c("ACN", "Undirected SDN", "Directed SDN", "LSA", "word2vec"))
+    levels = c("ACN PMFG", "ACN Unfiltered", "ACN_0.1", "Undirected SDN", "Undirected PMFG",
+               "Directed SDN", "LSA", "word2vec"))
 
 library(ggplot2)
 library(ggthemes)
 
 z_rmisc_combined1 =z_rmisc_combined %>%
-  filter(! Representation %in% c("ACN", "LSA", "word2vec"))
+  filter(! Representation %in% c( "LSA", "word2vec"))
 
 z_rmisc_combined1 %>% 
   ggplot(aes(x = pathlengthfac, y = zRTTarget_trim, 
@@ -1124,10 +1383,11 @@ geom_line(size = 1)+
               width=.2,
               position = position_dodge(0))+
  theme_few()+
+  ylim(-0.50, 0.4)+
   scale_color_gdocs()+
   #scale_x_continuous(breaks = c(1,2,3,4,5,6,10,15,20))+
     xlab("Network Path Length") + ylab("Standardized RT") + 
-  ggtitle("RTs in Progressive Demasking Task")  +
+  ggtitle("Experiment 2: Progressive Demasking")  +
    theme(axis.text = element_text(size = rel(1)),
           axis.title = element_text(face = "bold", size = rel(1)),
           legend.title = element_text(face = "bold", size = rel(1)),
